#-*- Autoconf -*-
#Process this file with autoconf to produce a configure script.


AC_PREREQ(2.61)
AC_INIT(appdemo,0.1,hailin8818@126.com)
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(appdemo,0.1)

#checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O

#checks for libraries.
PKG_CHECK_MODULES(BASE,["base"])
AC_SUBST(BASE_CFLAGS)
AC_SUBST(BASE_LIBS)

#checks for header files.

#checks for typedefs, structures, and compiler characteristics.

#checks for libraries functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
